LPS-115613 Fix entry counter with wrong margin in a deployed app

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_upper_toolbar.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_upper_toolbar.scss
@@ -17,4 +17,8 @@
 		top: 0;
 		width: auto;
 	}
+
+	.container-fluid {
+		padding: 0 16px;
+	}
 }
